Refactoring the Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,33 @@
     <item name="Prill" type="string">Prill</item>
     <item name="Qershor" type="string">Qershor</item>
     <item name="Shtator" type="string">Shtator</item>
+
+
+        <string name="main_activity_label">ALC 4 Phase 1</string>
+        <string name="main_activity_welcome">welcome to</string>
+        <string name="main_activity_title">ALC 4.0</string>
+        <string name="main_activity_description">
+        A community empowering the next generation of African technology leaders.</string>
+        <string name="button_about_alc">about</string>
+        <string name="button_my_profile">profile</string>
+
+        <string name="about_activity_label">About ALC</string>
+
+        <string name="profile_activity_label">My profile</string>
+        <string name="profile_name">Brian Odhiambo</string>
+        <string name="profile_track">Android Developer Track</string>
+
+        <string name="display_country">Country</string>
+        <string name="profile_country">Kenya</string>
+
+        <string name="display_email">Email</string>
+        <string name="profile_email">mrmambobryan@gmail.com</string>
+
+        <string name="display_number">Mobile</string>
+        <string name="profile_number">+254713516006</string>
+
+        <string name="display_slack_username">Username</string>
+        <string name="profile_slack_username">MamboBryan</string>
+        <string name="display_contact">Lets talk</string>
+
 </resources>
