Implemented DropMenu for Afatet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
 
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
+    <string name="rektorati_uni_pr_edu">rektorati@uni-pr.edu</string>
 
 </resources>
